--- a/src/scss/_label.scss
+++ b/src/scss/_label.scss
@@ -25,3 +25,9 @@
     display: none;
   }
 }
+
+@media (max-width: 768px) {
+  .label {
+    padding: .1em .5em;
+  }
+}
